--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
-    "method-override": "^3.0.0"
+    "method-override": "^3.0.0",
+    "nedb": "^1.8.0"
   }
 }
