--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "method-override": "^3.0.0",
+    "mongodb": "^4.3.0",
     "nedb": "^1.8.0"
   }
 }
