code stuck on create table

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "method-override": "^3.0.0",
     "mongodb": "^4.3.0",
     "nedb": "^1.8.0",
+    "postgres": "^1.0.2",
     "redis": "^4.0.1"
   }
 }
