--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "nedb": "^1.8.0",
     "postgres": "^1.0.2",
     "redis": "^4.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
