--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ data/*
 
 !data
 
-
+package-lock.json
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
