adding cache middleware

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,10 @@ yarn-error.log*
 lerna-debug.log*
 
 data/*
+admin_data/*
 
 !data
-
+!admin_data
 package-lock.json
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
