--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "json_server_max",
+  "name": "json_server_next",
   "version": "1.0.1",
   "description": "JSON Server on steroids",
   "main": "app.js",
